Add GitHub and LinkedIn icons

--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
 
     <header>
         <h1>Henry Moore</h1>
-        <p>Software Engineer</p>
-        <p>
-            <a href="https://github.com/hmoorerg" target="_blank" rel="noopener noreferrer">GitHub</a>
-            |
-            <a href="https://www.linkedin.com/in/henry-moore-dev" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+        <p>Full-Stack Software Engineer</p>
+        <p class="social-links">
+            <a href="https://github.com/hmoorerg" target="_blank" rel="noopener noreferrer">
+                <img src="/assets/icons/github.svg" alt="" aria-hidden="true" width="20" height="20" />
+                GitHub
+            </a>
+            <a href="https://www.linkedin.com/in/henry-moore-dev" target="_blank" rel="noopener noreferrer">
+                <img src="/assets/icons/LinkedIn.svg" alt="" aria-hidden="true" width="20" height="20" />
+                LinkedIn
+            </a>
         </p>
     </header>
 
