Improve accessibility and styling

--- a/index.html
+++ b/index.html
@@ -9,27 +9,33 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
 </head>
 <body>
-
     <header>
         <h1>Henry Moore</h1>
         <p>Full-Stack Software Engineer</p>
-        <p class="social-links">
-            <a href="https://github.com/hmoorerg" target="_blank" rel="noopener noreferrer">
-                <img src="/assets/icons/github.svg" alt="" aria-hidden="true" width="20" height="20" />
-                GitHub
-            </a>
-            <a href="https://www.linkedin.com/in/henry-moore-dev" target="_blank" rel="noopener noreferrer">
-                <img src="/assets/icons/LinkedIn.svg" alt="" aria-hidden="true" width="20" height="20" />
-                LinkedIn
-            </a>
-        </p>
+        <nav aria-label="Social media links">
+            <ul>
+                <li>
+                    <a href="https://github.com/hmoorerg" target="_blank" rel="noopener noreferrer" aria-label="GitHub profile">
+                        <img src="/assets/icons/github.svg" alt="" aria-hidden="true" width="20" height="20" />
+                        GitHub
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/henry-moore-dev" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn profile">
+                        <img src="/assets/icons/LinkedIn.svg" alt="" aria-hidden="true" width="20" height="20" />
+                        LinkedIn
+                    </a>
+                </li>
+            </ul>
+        </nav>
     </header>
-
-    <section class="resume">
+    <main class="resume">
         <h2>Resume</h2>
         <a href="Resume - Henry Moore.pdf" class="download-btn" download>Download PDF</a>
-        <iframe src="Resume - Henry Moore.pdf" frameborder="0" title="Resume of Henry Moore"></iframe>
-    </section>
-
+        <iframe src="Resume - Henry Moore.pdf" frameborder="0" title="Henry Moore's Resume"></iframe>
+    </main>
+    <footer>
+        <p>&copy; 2025 Henry Moore</p>
+    </footer>
 </body>
 </html>
