Update resume to latest version

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     </header>
     <main class="resume">
         <h2>Resume</h2>
-        <a href="Resume - Henry Moore.pdf" class="download-btn" download>Download PDF</a>
-        <iframe src="Resume - Henry Moore.pdf" frameborder="0" title="Henry Moore's Resume"></iframe>
+        <a href="Henry_Moore_Resume.pdf" class="download-btn" download>Download PDF</a>
+        <iframe src="Henry_Moore_Resume.pdf" frameborder="0" title="Henry Moore's Resume"></iframe>
     </main>
     <footer>
         <p>&copy; 2025 Henry Moore</p>
